# holiday_sync

./: MANIFEST.in  README.md  pyproject.toml
holiday_sync/: hooks.py  modules.txt
holiday_sync/holiday_sync/: __init__.py  test_utils.py  utils.py
holiday_sync/holiday_sync/doctype/: __init__.py
holiday_sync/holiday_sync/doctype/google_holiday_sync_settings/: __init__.py  google_holiday_sync_settings.js  google_holiday_sync_settings.json  google_holiday_sync_settings.py
holiday_sync/public/js/: company.js
